# FinalFantasyFast

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  crud.py  database.py  main.py  models.py
app/routers/: characters.py  monsters.py
backend/: Dockerfile  crud.py  database.py  initialize_db.py  main.py  models.py  pyproject.toml
backend/routers/: characters.py  games.py  monsters.py
nginx/: nginx.conf
react-frontend/: Dockerfile  package-lock.json  package.json
react-frontend/src/: App.css  App.js  config.js  constants.js
react-frontend/src/components/: Character.js  DataList.js  Game.js  Monster.js
react-frontend/src/hooks/: useFetchData.js  useSearch.js
