[tool.poetry]
name = "finalfantasyfast"
version = "0.1.0"
description = ""
authors = ["Luigi Maglanoc <luigi_maglanoc@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
pydantic = "^2.8.2"
alembic = "^1.13.2"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
